Issue #1343 style:Endpage license color and alignment if fixed

--- a/player/public/styles/style.css
+++ b/player/public/styles/style.css
@@ -1116,6 +1116,8 @@ body {
     position: absolute;
     bottom: 3%;
     left: 9%;
+    color: #494949;
+    font-size: 0.9em;
 }
 
 .icon-opacity {
